# curious-qmoe

./: .gitignore  CITATION.CFF  CITATION.cff  LICENSE  README.md  configs.yaml  configs_2.yaml  cristian.py  engine.py  pyproject.toml  requirements.txt  run_img_classifier.py  run_trainer.py  run_trainer_MoETask.py  run_trainer_MoETask_holdout.py  train_cv.py  train_cv_clip_dynTuned.py  tuner.py
QWave/: bitnnet.py  datasets.py  graphics.py  memory.py  metrics.py  models.py  moe.py  qmoe_layers.py  train_utils.py  utils.py
clip/: clip.ipynb
config/: esc50.yaml
data/UP3/: UP3-data_processing.py
data/esc/: esc-50-data_processing.py  plot-esc.ipynb
data/quinn/: Quinn.py
data/urban8k/: urban8k-data_processing.py
full-finetuning-models/0.1_Fined_Tuned_models/: 0_Train_enet_model_bce.ipynb  1_Test_enet_model_bce.ipynb  2_Threshold_Optimization.ipynb  Train_models.ipynb  train.py  train_enet.py  train_enet_BCE.py  train_k_fold.ipynb
full-finetuning-models/0.2_Finetuned_enet_dataset/: 0_Train_enet_model_bce.ipynb  1_Test_enet_model_bce.ipynb  2_Threshold_Optimization.ipynb  2_Threshold_Optimization_improved.ipynb
notebooks/: analyze-results.py  analyze-std.py  organize-results.py
qnet/: __init__.py  datasets.py  embeddings.py  graphics.py  model.py  train.py  utils.py
qwave.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: benchmark.py  benchmark_baselines.py
scripts/0_VE_extraction/: auto_VE_extraction.ipynb  auto_ve_extraction.py  extract_PCA_embeddings.ipynb  extract_embeddings-pretrained_mobileNet.ipynb
scripts/Baseline/: baseline.py  baseline_hyper.py  tuner.py  tuner_dynModel.py
scripts/CLIP/: gfnet.py  losses.py  train_cv_clip.py
scripts/MLPbitnet/: test2.py
scripts/MLPbitnnet/: train_mlpbitnnet.py
scripts/MoEData/: moe.py  moe_deeprouter.py  moe_diversity.py  moe_load_balancing.py  moe_optimize.py  moe_vanilla.py  run_trainer_MoEData_CV.py  run_trainer_MoEData_CV_new_router.py  run_trainer_MoEData_CV_wrapped.py
scripts/MoEFast/: moe.py  moe_diversity.py  moe_optimize.py  moe_raw.py  moefast.py
scripts/MoEOvR/: run_trainer_MoEOvR_CV.py
scripts/MoETask/: run_trainer_MoETask.py  run_trainer_MoETask_CV.py  run_trainer_MoETask_CV_wrappers.py  run_trainer_MoETask_holdout.py
scripts/QMoE/: qmoe.py
scripts/analysis/: __init__.py  generate_rebuttal_figure.py  latency_benchmark.py  routing_analysis.py
scripts/benchmarks/: README.md  models.sh
scripts/memory/: README.md  calculate_model_sizes.py
scripts/pre-processing/: ESC-hold-out-processing.ipynb  (+1 more)
tests/: run_tests.py  test_benchmark_model_sizes.py  test_bitnnet.py  test_checkpoint_loading.py  test_curiosity_mechanism.py  test_latency_benchmark.py  test_minimal_benchmark.py  test_model_sizes.py  test_routing_analysis.py
(+50 files in other folders)
