[project]
name = "qwave"
version = "0.1.0"
description = ""
authors = [{ name = "Sebastian Cajas", email = "sebasmos@mit.edu" }]
dependencies = [
    "scikit-learn==1.6.1",
    "tabulate==0.9.0",
    "pandas==2.2.3",
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "sympy>=1.13.3,<1.14",
    "joblib==1.4.2",
    "setuptools==75.1.0",
    "scipy==1.14.1",
    "clip @ git+https://github.com/openai/CLIP.git",
    "ftfy",
    "regex",
    "tqdm==4.67.1",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "Pillow==11.2.1",
    "psutil",
    "numpy==2.2.5",
    "timm==1.0.15",
    "transformers",
    "codecarbon",
    "memory_profiler",
    "fvcore"
]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

keywords = ["machine learning", "vector embeddings", "quantization"]

[project.urls]
Repository = "https://github.com/sebasmos/QWave"
"Bug Tracker" = "https://github.com/sebasmos/QWave/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qwave"]